// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BusinessCardModal snapshots should match snapshot for Details view 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <Modal
    animationType="fade"
    hardwareAccelerated={false}
    onRequestClose={[Function]}
    transparent={true}
    visible={true}
  >
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "rgba(0,0,0,0.5)",
          "flex": 1,
        }
      }
      testID="modal-backdrop"
    >
      <View
        style={
          {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
            "paddingHorizontal": 20,
          }
        }
      >
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View
            style={
              [
                {
                  "alignSelf": "center",
                  "backgroundColor": "#fff",
                  "borderRadius": 20,
                  "elevation": 8,
                  "maxHeight": "85%",
                  "shadowColor": "#333",
                  "shadowOffset": {
                    "height": 8,
                    "width": 0,
                  },
                  "shadowOpacity": 0.3,
                  "shadowRadius": 10,
                },
                {
                  "maxWidth": 700,
                  "width": "100%",
                },
              ]
            }
          >
            <View
              style={
                {
                  "borderBottomColor": "#99940",
                  "borderBottomWidth": 1,
                  "flexDirection": "row",
                }
              }
            >
              <View
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  [
                    {
                      "alignItems": "center",
                      "flex": 1,
                      "paddingHorizontal": 12,
                      "paddingVertical": 16,
                    },
                    false,
                  ]
                }
                testID="quick-info-tab"
              >
                <Text
                  style={
                    [
                      {
                        "color": "#999",
                        "fontFamily": "WorkSans-Medium",
                        "fontSize": 16,
                      },
                      false,
                    ]
                  }
                >
                  Quick Info
                </Text>
              </View>
              <View
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  [
                    {
                      "alignItems": "center",
                      "flex": 1,
                      "paddingHorizontal": 12,
                      "paddingVertical": 16,
                    },
                    {
                      "borderBottomColor": "#D4AF37",
                      "borderBottomWidth": 3,
                    },
                  ]
                }
                testID="details-tab"
              >
                <Text
                  style={
                    [
                      {
                        "color": "#999",
                        "fontFamily": "WorkSans-Medium",
                        "fontSize": 16,
                      },
                      {
                        "color": "#D4AF37",
                        "fontFamily": "WorkSans-Bold",
                      },
                    ]
                  }
                >
                  Details
                </Text>
              </View>
            </View>
            <RCTScrollView
              contentInsetAdjustmentBehavior="always"
              keyboardShouldPersistTaps="handled"
              showsVerticalScrollIndicator={false}
              style={
                {
                  "maxHeight": "100%",
                  "paddingHorizontal": 4,
                }
              }
            >
              <View>
                <View
                  style={
                    [
                      {
                        "backgroundColor": "#fff",
                        "borderRadius": 20,
                        "elevation": 4,
                        "padding": 16,
                        "shadowColor": "#000",
                        "shadowOffset": {
                          "height": 6,
                          "width": 0,
                        },
                        "shadowOpacity": 0.08,
                        "shadowRadius": 12,
                      },
                      {
                        "alignSelf": "center",
                        "width": 620,
                      },
                    ]
                  }
                >
                  <Text
                    ellipsizeMode="tail"
                    numberOfLines={2}
                    style={
                      {
                        "color": "#333",
                        "fontFamily": "WorkSans-Bold",
                        "fontSize": 22,
                        "fontWeight": "700",
                        "lineHeight": 24,
                        "marginBottom": 20,
                        "textAlign": "center",
                      }
                    }
                    testID="bd-title"
                  >
                    Test Restaurant
                  </Text>
                  <View
                    style={
                      {
                        "marginBottom": 24,
                      }
                    }
                  >
                    <Text
                      style={
                        {
                          "color": "#333",
                          "fontFamily": "WorkSans-Bold",
                          "fontSize": 18,
                          "marginBottom": 12,
                        }
                      }
                    >
                      Address
                    </Text>
                    <Text
                      style={
                        {
                          "allowFontScaling": true,
                          "color": "#333",
                          "fontFamily": "WorkSans-Regular",
                          "fontSize": 16,
                          "lineHeight": 22,
                        }
                      }
                      testID="bd-address"
                    >
                      123 Main St, Columbus, OH 43215
                    </Text>
                  </View>
                  <View
                    style={
                      {
                        "marginBottom": 24,
                      }
                    }
                  >
                    <Text
                      style={
                        {
                          "color": "#333",
                          "fontFamily": "WorkSans-Bold",
                          "fontSize": 18,
                          "marginBottom": 12,
                        }
                      }
                    >
                      Contact
                    </Text>
                    <Text
                      style={
                        {
                          "allowFontScaling": true,
                          "color": "#333",
                          "fontFamily": "WorkSans-Regular",
                          "fontSize": 16,
                        }
                      }
                      testID="bd-phone"
                    >
                      (555) 123-4567
                    </Text>
                  </View>
                  <View
                    style={
                      {
                        "marginBottom": 24,
                      }
                    }
                  >
                    <Text
                      style={
                        {
                          "color": "#333",
                          "fontFamily": "WorkSans-Bold",
                          "fontSize": 18,
                          "marginBottom": 12,
                        }
                      }
                    >
                      Hours
                    </Text>
                    <View
                      style={
                        {
                          "backgroundColor": "#F0EEEE",
                          "borderColor": "#99940",
                          "borderRadius": 12,
                          "borderWidth": 1,
                          "padding": 16,
                        }
                      }
                      testID="bd-hours"
                    >
                      <View
                        style={
                          {
                            "flexDirection": "row",
                            "flexWrap": "wrap",
                            "justifyContent": "space-between",
                            "paddingVertical": 6,
                          }
                        }
                      >
                        <Text
                          style={
                            {
                              "allowFontScaling": true,
                              "color": "#333",
                              "fontFamily": "WorkSans-Medium",
                              "fontSize": 14,
                              "width": 80,
                            }
                          }
                        >
                          Mon
                          :
                        </Text>
                        <Text
                          style={
                            {
                              "allowFontScaling": true,
                              "color": "#999",
                              "flex": 1,
                              "fontFamily": "WorkSans-Regular",
                              "fontSize": 14,
                              "textAlign": "right",
                            }
                          }
                        >
                          9:00 AM–5:00 PM
                        </Text>
                      </View>
                      <View
                        style={
                          {
                            "flexDirection": "row",
                            "flexWrap": "wrap",
                            "justifyContent": "space-between",
                            "paddingVertical": 6,
                          }
                        }
                      >
                        <Text
                          style={
                            {
                              "allowFontScaling": true,
                              "color": "#333",
                              "fontFamily": "WorkSans-Medium",
                              "fontSize": 14,
                              "width": 80,
                            }
                          }
                        >
                          Tue
                          :
                        </Text>
                        <Text
                          style={
                            {
                              "allowFontScaling": true,
                              "color": "#999",
                              "flex": 1,
                              "fontFamily": "WorkSans-Regular",
                              "fontSize": 14,
                              "textAlign": "right",
                            }
                          }
                        >
                          Closed
                        </Text>
                      </View>
                      <View
                        style={
                          {
                            "flexDirection": "row",
                            "flexWrap": "wrap",
                            "justifyContent": "space-between",
                            "paddingVertical": 6,
                          }
                        }
                      >
                        <Text
                          style={
                            {
                              "allowFontScaling": true,
                              "color": "#333",
                              "fontFamily": "WorkSans-Medium",
                              "fontSize": 14,
                              "width": 80,
                            }
                          }
                        >
                          ...
                          :
                        </Text>
                        <Text
                          style={
                            {
                              "allowFontScaling": true,
                              "color": "#999",
                              "flex": 1,
                              "fontFamily": "WorkSans-Regular",
                              "fontSize": 14,
                              "textAlign": "right",
                            }
                          }
                        />
                      </View>
                    </View>
                  </View>
                  <View
                    style={
                      {
                        "marginTop": 24,
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "flexDirection": "row",
                          "flexWrap": "wrap",
                          "gap": 12,
                          "justifyContent": "space-around",
                          "marginBottom": 16,
                        }
                      }
                    >
                      <View
                        accessible={true}
                        collapsable={false}
                        focusable={true}
                        onBlur={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        style={
                          {
                            "alignItems": "center",
                            "backgroundColor": "#D4AF37",
                            "borderRadius": 12,
                            "flex": 1,
                            "justifyContent": "center",
                            "minHeight": 44,
                            "minWidth": 80,
                            "paddingHorizontal": 16,
                            "paddingVertical": 12,
                          }
                        }
                        testID="bd-map-btn"
                      >
                        <Text
                          style={
                            {
                              "allowFontScaling": true,
                              "color": "#fff",
                              "fontFamily": "WorkSans-Bold",
                              "fontSize": 14,
                            }
                          }
                        >
                          📍 Map
                        </Text>
                      </View>
                      <View
                        accessible={true}
                        collapsable={false}
                        focusable={true}
                        onBlur={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        style={
                          {
                            "alignItems": "center",
                            "backgroundColor": "#D4AF37",
                            "borderRadius": 12,
                            "flex": 1,
                            "justifyContent": "center",
                            "minHeight": 44,
                            "minWidth": 80,
                            "paddingHorizontal": 16,
                            "paddingVertical": 12,
                          }
                        }
                        testID="bd-call-btn"
                      >
                        <Text
                          style={
                            {
                              "allowFontScaling": true,
                              "color": "#fff",
                              "fontFamily": "WorkSans-Bold",
                              "fontSize": 14,
                            }
                          }
                        >
                          📞 Call
                        </Text>
                      </View>
                      <View
                        accessible={true}
                        collapsable={false}
                        focusable={true}
                        onBlur={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        style={
                          {
                            "alignItems": "center",
                            "backgroundColor": "#D4AF37",
                            "borderRadius": 12,
                            "flex": 1,
                            "justifyContent": "center",
                            "minHeight": 44,
                            "minWidth": 80,
                            "paddingHorizontal": 16,
                            "paddingVertical": 12,
                          }
                        }
                        testID="bd-yelp-btn"
                      >
                        <Text
                          style={
                            {
                              "allowFontScaling": true,
                              "color": "#fff",
                              "fontFamily": "WorkSans-Bold",
                              "fontSize": 14,
                            }
                          }
                        >
                          🔗 Yelp
                        </Text>
                      </View>
                    </View>
                    <View
                      accessible={true}
                      collapsable={false}
                      focusable={true}
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onResponderGrant={[Function]}
                      onResponderMove={[Function]}
                      onResponderRelease={[Function]}
                      onResponderTerminate={[Function]}
                      onResponderTerminationRequest={[Function]}
                      onStartShouldSetResponder={[Function]}
                      style={
                        {
                          "alignItems": "center",
                          "backgroundColor": "#999",
                          "borderRadius": 12,
                          "justifyContent": "center",
                          "minHeight": 44,
                          "paddingHorizontal": 16,
                          "paddingVertical": 12,
                        }
                      }
                      testID="bd-close-btn"
                    >
                      <Text
                        style={
                          {
                            "allowFontScaling": true,
                            "color": "#333",
                            "fontFamily": "WorkSans-Bold",
                            "fontSize": 16,
                          }
                        }
                      >
                        Close
                      </Text>
                    </View>
                  </View>
                </View>
              </View>
            </RCTScrollView>
          </View>
        </View>
      </View>
    </View>
  </Modal>
</RNCSafeAreaProvider>
`;

exports[`BusinessCardModal snapshots should match snapshot for QuickInfo view 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <Modal
    animationType="fade"
    hardwareAccelerated={false}
    onRequestClose={[Function]}
    transparent={true}
    visible={true}
  >
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "rgba(0,0,0,0.5)",
          "flex": 1,
        }
      }
      testID="modal-backdrop"
    >
      <View
        style={
          {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
            "paddingHorizontal": 20,
          }
        }
      >
        <View
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View
            style={
              [
                {
                  "alignSelf": "center",
                  "backgroundColor": "#fff",
                  "borderRadius": 20,
                  "elevation": 8,
                  "maxHeight": "85%",
                  "shadowColor": "#333",
                  "shadowOffset": {
                    "height": 8,
                    "width": 0,
                  },
                  "shadowOpacity": 0.3,
                  "shadowRadius": 10,
                },
                {
                  "maxWidth": 700,
                  "width": "100%",
                },
              ]
            }
          >
            <View
              style={
                {
                  "borderBottomColor": "#99940",
                  "borderBottomWidth": 1,
                  "flexDirection": "row",
                }
              }
            >
              <View
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  [
                    {
                      "alignItems": "center",
                      "flex": 1,
                      "paddingHorizontal": 12,
                      "paddingVertical": 16,
                    },
                    {
                      "borderBottomColor": "#D4AF37",
                      "borderBottomWidth": 3,
                    },
                  ]
                }
                testID="quick-info-tab"
              >
                <Text
                  style={
                    [
                      {
                        "color": "#999",
                        "fontFamily": "WorkSans-Medium",
                        "fontSize": 16,
                      },
                      {
                        "color": "#D4AF37",
                        "fontFamily": "WorkSans-Bold",
                      },
                    ]
                  }
                >
                  Quick Info
                </Text>
              </View>
              <View
                accessible={true}
                collapsable={false}
                focusable={true}
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  [
                    {
                      "alignItems": "center",
                      "flex": 1,
                      "paddingHorizontal": 12,
                      "paddingVertical": 16,
                    },
                    false,
                  ]
                }
                testID="details-tab"
              >
                <Text
                  style={
                    [
                      {
                        "color": "#999",
                        "fontFamily": "WorkSans-Medium",
                        "fontSize": 16,
                      },
                      false,
                    ]
                  }
                >
                  Details
                </Text>
              </View>
            </View>
            <RCTScrollView
              contentInsetAdjustmentBehavior="always"
              keyboardShouldPersistTaps="handled"
              showsVerticalScrollIndicator={false}
              style={
                {
                  "maxHeight": "100%",
                  "paddingHorizontal": 4,
                }
              }
            >
              <View>
                <View
                  style={
                    [
                      {
                        "backgroundColor": "#fff",
                        "borderRadius": 20,
                        "elevation": 4,
                        "padding": 16,
                        "shadowColor": "#000",
                        "shadowOffset": {
                          "height": 6,
                          "width": 0,
                        },
                        "shadowOpacity": 0.08,
                        "shadowRadius": 12,
                      },
                      {
                        "alignSelf": "center",
                        "width": 620,
                      },
                    ]
                  }
                >
                  <View
                    style={
                      {
                        "aspectRatio": 1.5,
                        "borderRadius": 16,
                        "marginBottom": 16,
                        "overflow": "hidden",
                        "position": "relative",
                        "width": "100%",
                      }
                    }
                  >
                    <Image
                      source={
                        {
                          "uri": "https://example.com/image.jpg",
                        }
                      }
                      style={
                        {
                          "height": "100%",
                          "width": "100%",
                        }
                      }
                      testID="bqi-image"
                    />
                    <View
                      accessibilityLabel="Add to favorites"
                      accessible={true}
                      collapsable={false}
                      focusable={true}
                      hitSlop={
                        {
                          "bottom": 8,
                          "left": 8,
                          "right": 8,
                          "top": 8,
                        }
                      }
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onResponderGrant={[Function]}
                      onResponderMove={[Function]}
                      onResponderRelease={[Function]}
                      onResponderTerminate={[Function]}
                      onResponderTerminationRequest={[Function]}
                      onStartShouldSetResponder={[Function]}
                      style={
                        {
                          "alignItems": "center",
                          "backgroundColor": "rgba(0,0,0,0.4)",
                          "borderRadius": 20,
                          "height": 40,
                          "justifyContent": "center",
                          "position": "absolute",
                          "right": 12,
                          "top": 12,
                          "width": 40,
                        }
                      }
                      testID="bqi-favorite-btn"
                    >
                      <Text
                        allowFontScaling={false}
                        selectable={false}
                        style={
                          [
                            {
                              "color": "#fff",
                              "fontSize": 24,
                            },
                            {
                              "textShadowColor": "#000",
                              "textShadowOffset": {
                                "height": 0,
                                "width": 0,
                              },
                              "textShadowRadius": 4,
                            },
                            {
                              "fontFamily": "ionicons",
                              "fontStyle": "normal",
                              "fontWeight": "normal",
                            },
                            {},
                          ]
                        }
                      >
                        
                      </Text>
                    </View>
                  </View>
                  <Text
                    ellipsizeMode="tail"
                    numberOfLines={2}
                    style={
                      {
                        "color": "#333",
                        "fontFamily": "WorkSans-Bold",
                        "fontSize": 22,
                        "fontWeight": "700",
                        "lineHeight": 24,
                        "marginBottom": 12,
                      }
                    }
                    testID="bqi-title"
                  >
                    Test Restaurant
                  </Text>
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "flexWrap": "wrap",
                        "gap": 6,
                        "marginBottom": 12,
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "backgroundColor": "#D4AF3715",
                          "borderRadius": 12,
                          "paddingHorizontal": 8,
                          "paddingVertical": 4,
                        }
                      }
                    >
                      <Text
                        style={
                          {
                            "color": "#D4AF37",
                            "fontFamily": "WorkSans-Medium",
                            "fontSize": 14,
                          }
                        }
                        testID="bqi-rating"
                      >
                        4.5
                        ★
                      </Text>
                    </View>
                    <View
                      style={
                        {
                          "backgroundColor": "#99915",
                          "borderRadius": 12,
                          "paddingHorizontal": 8,
                          "paddingVertical": 4,
                        }
                      }
                    >
                      <Text
                        style={
                          {
                            "color": "#333",
                            "fontFamily": "WorkSans-Regular",
                            "fontSize": 14,
                          }
                        }
                        testID="bqi-reviews"
                      >
                        128
                         reviews
                      </Text>
                    </View>
                    <View
                      style={
                        {
                          "backgroundColor": "#05966915",
                          "borderRadius": 12,
                          "paddingHorizontal": 8,
                          "paddingVertical": 4,
                        }
                      }
                    >
                      <Text
                        style={
                          {
                            "color": "#059669",
                            "fontFamily": "WorkSans-Medium",
                            "fontSize": 14,
                          }
                        }
                        testID="bqi-price"
                      >
                        $$
                      </Text>
                    </View>
                  </View>
                  <Text
                    ellipsizeMode="tail"
                    numberOfLines={1}
                    style={
                      {
                        "color": "#666",
                        "fontFamily": "WorkSans-Regular",
                        "fontSize": 14,
                        "marginBottom": 16,
                      }
                    }
                    testID="bqi-categories"
                  >
                    Italian, Pizza
                  </Text>
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "flexWrap": "wrap",
                        "justifyContent": "space-between",
                        "marginBottom": 12,
                      }
                    }
                  >
                    <Text
                      style={
                        {
                          "color": "#333",
                          "flex": 1,
                          "fontFamily": "WorkSans-Medium",
                          "fontSize": 14,
                          "marginRight": 8,
                        }
                      }
                      testID="bqi-today"
                    >
                      Today: 
                      9:00 AM–5:00 PM
                    </Text>
                    <View
                      style={
                        [
                          {
                            "borderRadius": 12,
                            "paddingHorizontal": 8,
                            "paddingVertical": 4,
                          },
                          {
                            "backgroundColor": "#05966920",
                          },
                        ]
                      }
                    >
                      <Text
                        style={
                          [
                            {
                              "fontFamily": "WorkSans-Bold",
                              "fontSize": 12,
                            },
                            {
                              "color": "#059669",
                            },
                          ]
                        }
                        testID="bqi-status"
                      >
                        Open
                      </Text>
                    </View>
                  </View>
                  <Text
                    style={
                      {
                        "color": "#999",
                        "fontFamily": "WorkSans-Regular",
                        "fontSize": 14,
                        "marginBottom": 20,
                      }
                    }
                    testID="bqi-distance"
                  >
                    📍 
                    0.3 mi
                  </Text>
                  <View
                    style={
                      {
                        "flexDirection": "row",
                        "gap": 12,
                        "justifyContent": "space-around",
                        "marginTop": 8,
                      }
                    }
                  >
                    <View
                      accessible={true}
                      collapsable={false}
                      focusable={true}
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onResponderGrant={[Function]}
                      onResponderMove={[Function]}
                      onResponderRelease={[Function]}
                      onResponderTerminate={[Function]}
                      onResponderTerminationRequest={[Function]}
                      onStartShouldSetResponder={[Function]}
                      style={
                        {
                          "alignItems": "center",
                          "backgroundColor": "#D4AF37",
                          "borderRadius": 12,
                          "flex": 1,
                          "justifyContent": "center",
                          "minHeight": 44,
                          "paddingHorizontal": 16,
                          "paddingVertical": 12,
                        }
                      }
                      testID="bqi-details-btn"
                    >
                      <Text
                        style={
                          {
                            "allowFontScaling": true,
                            "color": "#fff",
                            "fontFamily": "WorkSans-Bold",
                            "fontSize": 16,
                          }
                        }
                      >
                        Details
                      </Text>
                    </View>
                    <View
                      accessible={true}
                      collapsable={false}
                      focusable={true}
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onResponderGrant={[Function]}
                      onResponderMove={[Function]}
                      onResponderRelease={[Function]}
                      onResponderTerminate={[Function]}
                      onResponderTerminationRequest={[Function]}
                      onStartShouldSetResponder={[Function]}
                      style={
                        {
                          "alignItems": "center",
                          "backgroundColor": "#D4AF37",
                          "borderRadius": 12,
                          "flex": 1,
                          "justifyContent": "center",
                          "minHeight": 44,
                          "paddingHorizontal": 16,
                          "paddingVertical": 12,
                        }
                      }
                      testID="bqi-yelp-btn"
                    >
                      <Text
                        style={
                          {
                            "allowFontScaling": true,
                            "color": "#fff",
                            "fontFamily": "WorkSans-Bold",
                            "fontSize": 16,
                          }
                        }
                      >
                        Yelp
                      </Text>
                    </View>
                    <View
                      accessible={true}
                      collapsable={false}
                      focusable={true}
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onResponderGrant={[Function]}
                      onResponderMove={[Function]}
                      onResponderRelease={[Function]}
                      onResponderTerminate={[Function]}
                      onResponderTerminationRequest={[Function]}
                      onStartShouldSetResponder={[Function]}
                      style={
                        [
                          {
                            "alignItems": "center",
                            "backgroundColor": "#D4AF37",
                            "borderRadius": 12,
                            "flex": 1,
                            "justifyContent": "center",
                            "minHeight": 44,
                            "paddingHorizontal": 16,
                            "paddingVertical": 12,
                          },
                          {
                            "backgroundColor": "#999",
                          },
                        ]
                      }
                      testID="bqi-close-btn"
                    >
                      <Text
                        style={
                          [
                            {
                              "allowFontScaling": true,
                              "color": "#fff",
                              "fontFamily": "WorkSans-Bold",
                              "fontSize": 16,
                            },
                            {
                              "allowFontScaling": true,
                              "color": "#333",
                            },
                          ]
                        }
                      >
                        Close
                      </Text>
                    </View>
                  </View>
                </View>
              </View>
            </RCTScrollView>
          </View>
        </View>
      </View>
    </View>
  </Modal>
</RNCSafeAreaProvider>
`;
